# opengl-cpp-chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  socket-client.cpp
flask-server/: requirements.txt
res/: basic.shader  dark.shader
src/: index_buffer.hpp  shader.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.cpp
src/chess/: chess_piece.cpp  chess_piece.hpp  common.cpp  common.hpp  game.cpp  game.hpp  game_board.cpp  game_board.hpp  game_state.cpp  game_state.hpp  gameplay.cpp  pieces.cpp  pieces.hpp  rules.cpp
src/chess/interfaces/: drawable.cpp  drawable.hpp
src/graphics/: core.hpp  gui.cpp  gui.hpp  index_buffer.cpp  index_buffer.hpp  model.cpp  model.hpp  model_factory.cpp  model_factory.hpp  opengl_env.cpp  opengl_env.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
